# HA_ticktick

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
custom_components/ticktick/: __init__.py  api.py  application_credentials.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.py  services.yaml  strings.json
custom_components/ticktick/translations/: en.json
docs/: plan.md
tests/: conftest.py  test_api.py  test_coordinator.py  test_services.py
